# py_tracking_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 52a915bf78b7_create_table_trackings.py  8cce36afcc5d_create_table_user.py  904c423dac2a_create_table_user.py  96113637733b_initial_tables.py
app/: __init__.py
app/config/: __init__.py  enviroments.py
app/database/: __init__.py  connection.py  schema.py
app/models/: __init__.py  order.py  tracking.py  user.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  user_create.py  user_get_or_create.py
app/utils/: __init__.py  log.py
src/config/: enviroments.py
