[tool.poetry]
name = "py-tracking-bot"
version = "0.1.0"
description = "PyTrackingBot é um bot do Telegram incrivelmente útil! Rastreie suas encomendas dos Correios com facilidade. Simplifique sua vida com o PyTrackingBot! 🚀📦 #Telegram #Bot"
authors = ["Diaszano"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
