[tool.poetry]
name = "py-tracking-bot"
version = "0.1.0"
description = "PyTrackingBot é um bot do Telegram incrivelmente útil! Rastreie suas encomendas dos Correios com facilidade. Simplifique sua vida com o PyTrackingBot! 🚀📦 #Telegram #Bot"
authors = ["Diaszano"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "^11.0.0"
pyrogram = "^2.0.106"
uvloop = "^0.19.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
tgcrypto = "^1.2.5"
loguru = "^0.7.2"
pydantic = "^2.6.4"

[tool.poetry.group.formatter.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
